linphone-3.5.0 -- December 22, 2011
	* added VP-8 video codec
	* added G722 audio codec
	* added SIP/TCP and SIP/TLS
	* added SRTP media encryption
	* Audio conferencing
	* UI: call history tab, menu simplified
	* UI: cosmetics for incall views
	* UI: integration with libnotify
	* UI: show registered SIP accounts
	* Fixes for MacOS X, and uses GtkQuartz engine

linphone-3.4.3 -- March 28, 2011
	* Fully ported to mac os x with gtk-osx (menu integration, bundle generation with "make bundle", sound I/O improved) but still audio only
	* Fix stupid warning "no response" that sometimes arrived at end of calls
	* limit the size of the log window (to prevent memory drain)
	* limit the size of the SDP message by removing unnecessary information (for well known codecs, for H264).
	  This is to prevent SIP messages from being discarded by routers on the internet when they exceeds in size the internet MTU.
	* other sip bugfixes
	Requires mediastreamer-2.7.3

linphone-3.4.2 -- March 3rd, 2011
	* fix problems with webcams on windows
	Requires mediastreamer-2.7.2

linphone-3.4.1 -- February 17th, 2011
	* bugfixes
	* gtk executable is renamed "linphone" (was linphone-3 before)
	Requires mediastreamer-2.7.1

linphone-3.4.0 -- February 7th, 2011
	* implement multiple calls feature: 
		- call hold (with possibility to play a music file)
		- call resume 
		- acceptance of 2nd call while putting the others on hold
		- creation of another outgoing call while already in call
		- blind call transfer
		- attended call transfer
			**CAUTION**: LinphoneCoreVTable has changed: pay attention to this when upgrading an old application to a newer liblinphone.
	* improve bandwidth management (one b=AS line is used for audio+video)
	* improvements in the echo limiter performance
	* implement a echo calibration feature (see linphone_core_start_echo_calibration()).
	* stun support bugfixes
	* possibility to use two video windows, one for local preview, one for remote video (linphonec only)